--- a/KODPersonalAccount/appsettings.json
+++ b/KODPersonalAccount/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgresSQL": "Host=localhost;Port=5433;Database=KOD;Username=postgres;Password=1234567890"
+  }
 }
