chore: add jwt settings

--- a/KODPersonalAccount/appsettings.json
+++ b/KODPersonalAccount/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "KodWebApp",
+    "Audience": "UserKodWebApp",
+    "Key": "mysupersecret_secretsecretsecretkey!123",
+    "ExpiryMinutes": 15
+  }
 }
