--- a/KODPersonalAccount/appsettings.json
+++ b/KODPersonalAccount/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresSQL": "Host=localhost;Port=5433;Database=KOD;Username=postgres;Password=1234567890"
+    "PostgresSQL": "Host=db;Port=5432;Database=KOD;Username=postgres;Password=1234567890"
   },
   "JwtSettings": {
     "Issuer": "KodWebApp",
