--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,8 @@
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
   
   db:
     image: postgres:latest
@@ -17,5 +18,10 @@
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234567890
       POSTGRES_DB: KOD
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready  -U postgres -d KOD" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
       - "./database:/var/lib//postgresql/data"
